fix header bar on mobile

--- a/crates/frontend/public/assets/style.css
+++ b/crates/frontend/public/assets/style.css
@@ -27,7 +27,8 @@
   }
 }
 
-html, dialog {
+html,
+dialog {
   background-color: var(--background-color);
   color: var(--text-on-background-color);
 }
@@ -54,11 +55,13 @@ a {
 
 header {
   background: var(--background-darker);
-  height: 60px;
+  min-height: 60px;
   font-weight: bold;
   display: flex;
+  flex-wrap: wrap;
+  gap: 12px;
   align-items: center;
-  padding: 12px;
+  padding: 4px 12px;
 
   border: 2px solid var(--border-color);
   border-radius: 12px;
@@ -308,11 +311,11 @@ footer {
 
 input[type="text"],
 input[type="password"] {
-    background: color-mix(in srgb, var(--background-color), var(--dilute-color) 10%);
-    border: 2px solid var(--border-color);
-    padding: 6px 6px;
-    color: var(--text-on-background-color);
-    margin: 2px;
+  background: color-mix(in srgb, var(--background-color), var(--dilute-color) 10%);
+  border: 2px solid var(--border-color);
+  padding: 6px 6px;
+  color: var(--text-on-background-color);
+  margin: 2px;
 }
 
 svg.icon {
